--- a/JupyterNotebook/Preprocessing.ipynb
+++ b/JupyterNotebook/Preprocessing.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Preprocessing\n",
-    "In this notebook is performed the study of dataset and the data preprocessing..."
+    "In this notebook is performed the study of dataset and the data preprocessing."
    ]
   },
   {
