--- a/JupyterNotebook/Rebalancing evaluation.ipynb
+++ b/JupyterNotebook/Rebalancing evaluation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "2641b514",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "0f506d0d",
    "metadata": {},
    "outputs": [],
@@ -93,12 +93,12 @@
    "metadata": {},
    "source": [
     "## LinearSVC\n",
-    "Best estimator selected is that with 20000 features and the chi2 score function with a best score of 0.5967010468382352."
+    "Best estimator selected is that with 20000 features and the chi2 score function with a best score of 0.5951419013089634."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "20ab1cd5",
    "metadata": {},
    "outputs": [],
@@ -112,22 +112,22 @@
     "    'selectkbest__k': [20000],\n",
     "    'selectkbest__score_func': [chi2]  \n",
     "    }\n",
-    "no_balance.append(0.5967010468382352)"
+    "no_balance.append(0.5951419013089634)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "99f20fbb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5709483157752279"
+       "0.5707534492951828"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,17 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "afe91384",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5892214007070729"
+       "0.5898055252829597"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,17 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "be59eb85",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.51878472741605"
+       "0.5213673063088089"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "f74b9af9",
    "metadata": {},
    "outputs": [],
@@ -221,12 +221,12 @@
    "metadata": {},
    "source": [
     "## MultinomialNB\n",
-    "Best estimator selected is that with 5000 features and the f_classif (default) score function with a best score of 0.4810446123089561."
+    "Best estimator selected is that with 5000 features and the f_classif (default) score function with a best score of 0.4806064431955515."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "id": "8244837e",
    "metadata": {},
    "outputs": [],
@@ -241,22 +241,22 @@
     "    'selectkbest__score_func': [f_classif]  \n",
     "    }\n",
     "\n",
-    "no_balance.append(0.4810446123089561)"
+    "no_balance.append(0.4806064431955515)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "id": "b10869fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5581330890156776"
+       "0.5596187611741493"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,17 +276,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "6c126158",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4966620604834593"
+       "0.4963942311116809"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,27 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "id": "cc3cef62",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "e:\\program\\miniconda3\\lib\\site-packages\\sklearn\\feature_selection\\_univariate_selection.py:112: UserWarning: Features [0 0 0 ... 0 0 0] are constant.\n",
-      "  warnings.warn(\"Features %s are constant.\" % constant_features_idx, UserWarning)\n",
-      "e:\\program\\miniconda3\\lib\\site-packages\\sklearn\\feature_selection\\_univariate_selection.py:113: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  f = msb / msw\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.5302845861439363"
+       "0.5277507164514343"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +323,7 @@
    "source": [
     "rus_pipe = make_pipeline(TfidfVectorizer(), \n",
     "                        RandomUnderSampler(random_state=1),\n",
-    "                        #VarianceThreshold(),\n",
+    "                        VarianceThreshold(),\n",
     "                        SelectKBest(),\n",
     "                        MultinomialNB())\n",
     "\n",
@@ -345,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "id": "9e3cbb33",
    "metadata": {},
    "outputs": [],
@@ -361,12 +351,12 @@
    "metadata": {},
    "source": [
     "## LogisticRegression \n",
-    "Best estimator selected is that with all the features, the f_classif (default) score function and the default solver that is 'lbfgs' with a best score of 0.5945327988736221."
+    "Best estimator selected is that with all the features, the f_classif (default) score function and the default solver that is 'lbfgs' with a best score of 0.5924376562600167."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "id": "3924bf3b",
    "metadata": {},
    "outputs": [],
@@ -379,22 +369,22 @@
     "    'tfidfvectorizer__tokenizer': [LemmaTokenizer()], \n",
     "    }\n",
     "\n",
-    "no_balance.append(0.5945327988736221) "
+    "no_balance.append(0.5924376562600167) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "id": "b5ec1be7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3603452381800353"
+       "0.5950441861182935"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,17 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "id": "256ded14",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3780819580077545"
+       "0.5924616309687468"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,17 +430,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "id": "6d768dc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5429295681347095"
+       "0.542880324712173"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "id": "d7b0219d",
    "metadata": {},
    "outputs": [],
@@ -484,12 +474,12 @@
    "metadata": {},
    "source": [
     "## RandomForest\n",
-    "Best estimator selected is that with 500 features, chi2 score function and a max tree depth of 8 with a best score of 0.38202870316948145."
+    "Best estimator selected is that with 500 features, chi2 score function and a max tree depth of 8 with a best score of 0.3825407433524941."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "id": "500be186",
    "metadata": {},
    "outputs": [],
@@ -506,22 +496,22 @@
     "    'randomforestclassifier__n_estimators': [100]\n",
     "    }\n",
     "\n",
-    "no_balance.append(0.38202870316948145)"
+    "no_balance.append(0.3825407433524941)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "id": "2dd2adc9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.40115503605406805"
+       "0.40605178275910375"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,17 +530,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "id": "ab36223c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3731849263841699"
+       "0.37357461185783514"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,17 +559,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "id": "64138303",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3994731143734284"
+       "0.4140928430834835"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "id": "92abb083",
    "metadata": {},
    "outputs": [],
@@ -614,12 +604,12 @@
    "metadata": {},
    "source": [
     "## KNeighborsClassifier\n",
-    "Best estimator selected is that with all the features and the default f_classif score function with a best score of 0.447885376080613."
+    "Best estimator selected is that with all the features and the default f_classif score function with a best score of 0.44734848269001104."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "id": "4989986c",
    "metadata": {},
    "outputs": [],
@@ -632,22 +622,22 @@
     "    'tfidfvectorizer__tokenizer': [LemmaTokenizer()]\n",
     "}\n",
     "\n",
-    "no_balance.append(0.447885376080613)"
+    "no_balance.append(0.44734848269001104)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "id": "d2fb15f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.34884509453360024"
+       "0.34762729923333163"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,17 +655,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "id": "7d731128",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.347164003865395"
+       "0.34726082274979636"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,17 +683,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "id": "6d8610b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3454345185944968"
+       "0.34728632295992384"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "id": "a70ca66d",
    "metadata": {},
    "outputs": [],
@@ -737,12 +727,12 @@
    "metadata": {},
    "source": [
     "## BernoulliNB Classifier\n",
-    "Best estimator selected is that with 10000 features and the f_classif(default) score function with a best score of 0.5815959237652936."
+    "Best estimator selected is that with 10000 features and the f_classif(default) score function with a best score of 0.5823505424136874."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "id": "439f8672",
    "metadata": {},
    "outputs": [],
@@ -756,22 +746,22 @@
     "    'selectkbest__k': [10000]\n",
     "    }\n",
     "\n",
-    "no_balance.append(0.5815959237652936)"
+    "no_balance.append(0.5823505424136874)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "id": "64a68a6a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5771124514154516"
+       "0.5794269397610958"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,17 +780,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "id": "d00f6345",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5782579011475095"
+       "0.577697418875379"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,17 +809,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 72,
    "id": "d563b8eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5789882482970181"
+       "0.5798900036327115"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "id": "a04fb2bf",
    "metadata": {},
    "outputs": [],
@@ -860,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "id": "4e55ca9a",
    "metadata": {},
    "outputs": [
@@ -894,45 +884,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LinearSVC</th>\n",
-       "      <td>0.573336</td>\n",
-       "      <td>0.591390</td>\n",
-       "      <td>0.523560</td>\n",
-       "      <td>0.596701</td>\n",
+       "      <td>0.570753</td>\n",
+       "      <td>0.589806</td>\n",
+       "      <td>0.521367</td>\n",
+       "      <td>0.595142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MultinomialNB</th>\n",
-       "      <td>0.559156</td>\n",
-       "      <td>0.496126</td>\n",
-       "      <td>0.530261</td>\n",
-       "      <td>0.481045</td>\n",
+       "      <td>0.559619</td>\n",
+       "      <td>0.496394</td>\n",
+       "      <td>0.527751</td>\n",
+       "      <td>0.480606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LogisticRegression</th>\n",
-       "      <td>0.360345</td>\n",
-       "      <td>0.378082</td>\n",
-       "      <td>0.360345</td>\n",
-       "      <td>0.594533</td>\n",
+       "      <td>0.595044</td>\n",
+       "      <td>0.592462</td>\n",
+       "      <td>0.595044</td>\n",
+       "      <td>0.592438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomForest</th>\n",
-       "      <td>0.401155</td>\n",
-       "      <td>0.373185</td>\n",
-       "      <td>0.399473</td>\n",
-       "      <td>0.382029</td>\n",
+       "      <td>0.406052</td>\n",
+       "      <td>0.373575</td>\n",
+       "      <td>0.414093</td>\n",
+       "      <td>0.382541</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>KNeibghorsC</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.447885</td>\n",
+       "      <th>KNeighbors</th>\n",
+       "      <td>0.347627</td>\n",
+       "      <td>0.347261</td>\n",
+       "      <td>0.347286</td>\n",
+       "      <td>0.447348</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BernoulliNC</th>\n",
-       "      <td>0.577112</td>\n",
-       "      <td>0.578258</td>\n",
-       "      <td>0.578988</td>\n",
-       "      <td>0.581596</td>\n",
+       "      <th>BernoulliNB</th>\n",
+       "      <td>0.579427</td>\n",
+       "      <td>0.577697</td>\n",
+       "      <td>0.579890</td>\n",
+       "      <td>0.582351</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -940,15 +930,15 @@
       ],
       "text/plain": [
        "                    Oversampling     Smote  Undersampling  No balance\n",
-       "LinearSVC               0.573336  0.591390       0.523560    0.596701\n",
-       "MultinomialNB           0.559156  0.496126       0.530261    0.481045\n",
-       "LogisticRegression      0.360345  0.378082       0.360345    0.594533\n",
-       "RandomForest            0.401155  0.373185       0.399473    0.382029\n",
-       "KNeibghorsC                  NaN       NaN            NaN    0.447885\n",
-       "BernoulliNC             0.577112  0.578258       0.578988    0.581596"
+       "LinearSVC               0.570753  0.589806       0.521367    0.595142\n",
+       "MultinomialNB           0.559619  0.496394       0.527751    0.480606\n",
+       "LogisticRegression      0.595044  0.592462       0.595044    0.592438\n",
+       "RandomForest            0.406052  0.373575       0.414093    0.382541\n",
+       "KNeighbors              0.347627  0.347261       0.347286    0.447348\n",
+       "BernoulliNB             0.579427  0.577697       0.579890    0.582351"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +946,7 @@
    "source": [
     "methods=['Oversampling','Smote', 'Undersampling', 'No balance']\n",
     "models=['LinearSVC',  'MultinomialNB', 'LogisticRegression', 'RandomForest', 'KNeighbors', 'BernoulliNB']\n",
-    "d = {'Oversampling': oversampling, 'SMOTE': sm, 'Undersampling': undersampling, 'No balance': no_balance}\n",
+    "d = {'Oversampling': oversampling, 'Smote': sm, 'Undersampling': undersampling, 'No balance': no_balance}\n",
     "df = pd.DataFrame(d, columns=methods, index=models)\n",
     "\n",
     "df"
